# typedorm

./: .gitignore  .npmignore  .npmrc  .releaserc.yml  README.md  commitlint.config.js  devenv.bash  eslint.config.js  eslint.config.mjs  initenv.bash  jest.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
__test__/__mocks__/: test-table.ts
__test__/github-issues/152/: issue-152.spec.ts  test-entity.ts
__test__/github-issues/157/: issue-157.spec.ts  test-table.ts
__test__/github-issues/158/: issue-158.spec.ts  test-entity.ts  test-table.ts
__test__/github-issues/176/: issue-176.spec.ts  user-entity.ts
__test__/github-issues/184/: issue-184.spec.ts  specific-event-entity.ts
__test__/github-issues/194/: issue-194.spec.ts  tenant-entity.ts
__test__/github-issues/195/: issue-195.spec.ts  specific-event-entity.ts  test-table.ts
__test__/github-issues/235/: issue-235.spec.ts  specific-event-entity.ts  test-table.ts
__test__/github-issues/313/: issue-313.spec.ts  test-entity.ts
__test__/github-issues/324/: issue-324.spec.ts  test-entity.ts
__test__/github-issues/325/: issue-325.spec.ts  (+2 more)
docs/: CHANGELOG.md  guide.md  how-to-recipes.md  upgrading-to-use-the-aws-sdk-v3.md
src/common/: enums.ts  index-options.ts  private-api.ts  public-api.ts  table.ts
src/core/: private-api.ts  public-api.ts
src/document-client/: index.ts  public-api.ts
src/testing/: index.spec.ts  index.ts  test.setupAfterEnv.ts
tools/: bazel-stamp-vars.js  stamp-current-tag.js  util.js
(+167 files in other folders)
