[tool.poetry]
name = "typedorm"
version = "0.1.0"
description = ""
authors = ["Yu Li <ylilarry@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint = "^2.16.1"
black = "^23.1.0"
ipython = "^8.8.0"
nodeenv = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
